--- a/res/layout/installed_app_details.xml
+++ b/res/layout/installed_app_details.xml
@@ -49,6 +49,16 @@
             layout="@layout/two_buttons_panel"
             android:id="@+id/control_buttons_panel"/>
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="5dp" />
+
+        <CheckBox
+            android:id="@+id/checkbox1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/incognito_title"/>
+
     </LinearLayout>
 </LinearLayout>
 
